--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,16 @@
   Angular Store
 </h1>
 
-<app-product-list></app-product-list>
+<nav>
+  <a routerLink="/home" routerLinkActive="active">Home</a>
+  <a routerLink="/products" routerLinkActive="active">Products</a>
+  <a routerLink="/contact" routerLinkActive="active">Contact</a>
+  <a routerLink="/admin" routerLinkActive="active">Admin</a>
+</nav>
+
+<router-outlet></router-outlet>
+
+<footer>
+  <hr />
+  Copyright Angular 2021
+</footer>
