--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -20,4 +20,9 @@
     </p>
     <p>Modified date:
         {{product.modifiedDate | date}}</p>
+    <p>
+        <button (click)="delete()">
+            Delete
+        </button>
+    </p>
 </div>
